--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 dist: precise # For 7.5GB of memory since the emulator requires a big chunk.
 env:
   matrix:
-    - ANDROID_TARGET=android-23
+    - ANDROID_TARGET=android-25
   global:
     - ADB_INSTALL_TIMEOUT=12
 android:
@@ -14,12 +14,13 @@ android:
     - tools
 
     # The BuildTools version used
-    - build-tools-23.0.3
+    - build-tools-25.0.3
 
     # The SDK version used to compile the project
-    - android-23
+    - android-25
 
     # Additional components
+    - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
 
@@ -44,6 +45,8 @@ script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
   - travis_wait make e2e
+  # Script to print lint information in logs.
+  - ./gradlew lintProdDebug --info
 
 after_script:
   - make artifacts
@@ -65,3 +68,11 @@ before_install:
   - pip install --user pillow # For screenshot tests
 after_success:
   - codecov
+
+
+install:
+  # Script to update build tools and resolve license problems, Ref: https://github.com/travis-ci/travis-ci/issues/6555#issuecomment-282635361
+  - echo y | android update sdk -u -a -t tools
+  - echo y | android update sdk -u -a -t platform-tools
+  - echo y | android update sdk -u -a -t build-tools-25.0.3
+  - echo y | android update sdk -u -a -t android-25
